Fixed alignment issues

--- a/src/components/Layout/Header.css
+++ b/src/components/Layout/Header.css
@@ -35,12 +35,12 @@
   top: 0;
   right: 0;
   width: 20%;
-  margin: 4rem 1.5rem 0 0;
+  margin: 4rem 2.5rem 0 0;
   height: auto;
   z-index: 999;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-end;
   justify-content: space-between;
   border-radius: 0 0 18px 18px;
 }
