--- a/src/components/Layout/NavLinks.css
+++ b/src/components/Layout/NavLinks.css
@@ -27,7 +27,7 @@
   }
 
   .dropdown-element{
-    margin-right: -5rem;
+    margin-right: 0rem;
     width: auto;
     background-color: var(--brand-800);
     border-radius: 12px;
@@ -58,7 +58,6 @@
 
   @keyframes circleDropAndRoll {
     0% {
-      margin-right: -3.5rem;
       opacity: 0;
       transform: translateY(-50px) scale(0);
       border-radius: 50%;
@@ -67,7 +66,6 @@
       padding: 0;
     }
     20% {
-      margin-right: -3.5rem;
       opacity: 1;
       transform: translateY(0) scale(1);
       border-radius: 50%;
@@ -76,7 +74,6 @@
       padding: 0;
     }
     40% {
-      margin-right: -3.5rem;
       opacity: 1;
       border-radius: 50%;
       width: 2rem;
@@ -84,7 +81,6 @@
       padding: 0;
     }
     60% {
-      margin-right: -3.5rem;
       opacity: 1;
       border-radius: 50%;
       width: 2rem;
@@ -92,7 +88,6 @@
       padding: 0;
     }
     80% {
-      margin-right: -3.5rem;
       opacity: 1;
       border-radius: 12px 50% 50% 12px;
       width: auto;
@@ -100,7 +95,6 @@
       padding: 0.5rem 1rem;
     }
     100% {
-      margin-right: 0;
       opacity: 1;
       transform: translateY(0) scale(1);
       border-radius: 12px;
